# chat-up

./: .gitignore  CMakeLists.txt  Doxyfile
chat-up/: CMakeLists.txt
chat-up-server/: CMakeLists.txt
chat-up-server/src/: ClientService.cpp  ClientService.h  ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  ServerSocketConfig.cpp  ServerSocketConfig.h  main.cpp
chat-up-server/src/Authentication/: AuthenticationService.cpp  AuthenticationService.h  AuthenticationStorage.cpp  AuthenticationStorage.h
chat-up-shared/: CMakeLists.txt
chat-up-shared/include/: Outcome.h
chat-up-shared/include/Authentication/: User.h
chat-up-shared/include/Config/: Config.h  ConfigException.h  ConfigManager.h
chat-up-shared/include/Content/: TextContent.h
chat-up-shared/include/Messaging/: Message.h  MessageBody.h  MessageException.h  MessageHeader.h  MessageOpener.h  MessageReceiver.h  MessageSender.h  MessageType.h  Version.h
chat-up-shared/include/Messaging/Messages/: Authentication.h  Content.h  Handshake.h
chat-up-shared/include/Socket/: IpAddress.h  ReadWriteSocket.h  Socket.h  SocketAddress.h  SocketConfig.h  SocketException.h
chat-up-shared/src/Authentication/: User.cpp
chat-up-shared/src/Config/: Config.cpp  ConfigException.cpp  ConfigManager.cpp
chat-up-shared/src/Messaging/: Message.cpp  MessageBody.cpp  MessageReceiver.cpp  MessageSender.cpp
chat-up-shared/src/Socket/: IpAddress.cpp  ReadWriteSocket.cpp  Socket.cpp  SocketAddress.cpp  SocketConfig.cpp  SocketException.cpp
chat-up/src/: ClientService.cpp  ClientService.h  ClientSocket.cpp  ClientSocket.h  ClientSocketConfig.cpp  ClientSocketConfig.h  CommandParser.cpp  CommandParser.h  Ui.cpp  Ui.h  main.cpp
